--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ tqdm==4.67.1
 # 向量数据库和模型
 pymilvus[model]==2.5.10
 
-# 深度学习框架 
+# 深度学习框架
 # GPU版本
-torch==2.7.0
+torch>2.0.0
 # CPU版本
-# torch==2.7.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+# torch>=2.7.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
